{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 61,
  "lineage": "4c0542cd-13c3-631e-d2b2-2d7a606cb2c4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/frontendIPConfigurations/web-lb-publicip-1",
                "inbound_nat_rules": [
                  "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/inboundNatRules/vm1-ssh-1022-vm-22",
                  "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/inboundNatRules/vm2-ssh-2022-vm-22"
                ],
                "load_balancer_rules": [
                  "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/loadBalancingRules/web-app1-rule"
                ],
                "name": "web-lb-publicip-1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/publicIPAddresses/shadi-staging-lbpublicip"
              }
            ],
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb",
            "location": "westeurope",
            "name": "shadi-staging-web-lb",
            "resource_group_name": "shadi-staging-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm2/ipConfigurations/web-vm-ip-1",
              "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm1/ipConfigurations/web-vm-ip-1"
            ],
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/backendAddressPools/web-backend",
            "load_balancing_rules": [
              "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/loadBalancingRules/web-app1-rule"
            ],
            "loadbalancer_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb",
            "name": "web-backend",
            "resource_group_name": "shadi-staging-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "web_lb_inbound_nat_rule_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm1/ipConfigurations/web-vm-ip-1",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/frontendIPConfigurations/web-lb-publicip-1",
            "frontend_ip_configuration_name": "web-lb-publicip-1",
            "frontend_port": 1022,
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/inboundNatRules/vm1-ssh-1022-vm-22",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb",
            "name": "vm1-ssh-1022-vm-22",
            "protocol": "Tcp",
            "resource_group_name": "shadi-staging-rg"
          },
          "dependencies": [
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "azurerm_lb.web_lb",
            "azurerm_linux_virtual_machine.web_linuxvm",
            "azurerm_network_interface.web_linuxvm_nic"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm2/ipConfigurations/web-vm-ip-1",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/frontendIPConfigurations/web-lb-publicip-1",
            "frontend_ip_configuration_name": "web-lb-publicip-1",
            "frontend_port": 2022,
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/inboundNatRules/vm2-ssh-2022-vm-22",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb",
            "name": "vm2-ssh-2022-vm-22",
            "protocol": "Tcp",
            "resource_group_name": "shadi-staging-rg"
          },
          "dependencies": [
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "azurerm_lb.web_lb",
            "azurerm_linux_virtual_machine.web_linuxvm",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/probes/tcp-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/loadBalancingRules/web-app1-rule"
            ],
            "loadbalancer_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb",
            "name": "tcp-probe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Tcp",
            "resource_group_name": "shadi-staging-rg"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/backendAddressPools/web-backend",
            "backend_address_pool_ids": [
              "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/backendAddressPools/web-backend"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/frontendIPConfigurations/web-lb-publicip-1",
            "frontend_ip_configuration_name": "web-lb-publicip-1",
            "frontend_port": 8080,
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/loadBalancingRules/web-app1-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb",
            "name": "web-app1-rule",
            "probe_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/probes/tcp-probe",
            "protocol": "Tcp",
            "resource_group_name": "shadi-staging-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.web_lbpublicip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db_postgress_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-db_postgress_nic",
            "internal_domain_name_suffix": "koowuzhb2s1efcawq1xlhbwgrb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "db-postgress-ip-1",
                "primary": true,
                "private_ip_address": "10.0.21.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-dbsubnet"
              }
            ],
            "location": "westeurope",
            "name": "shadi-staging-db_postgress_nic",
            "private_ip_address": "10.0.21.4",
            "private_ip_addresses": [
              "10.0.21.4"
            ],
            "resource_group_name": "shadi-staging-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm1",
            "internal_domain_name_suffix": "koowuzhb2s1efcawq1xlhbwgrb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-vm-ip-1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-websubnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-27-F3-DA",
            "name": "shadi-staging-web-vm1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "shadi-staging-rg",
            "virtual_machine_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Compute/virtualMachines/shadi-staging-web-vm1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm2",
            "internal_domain_name_suffix": "koowuzhb2s1efcawq1xlhbwgrb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-vm-ip-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-websubnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-27-F6-61",
            "name": "shadi-staging-web-vm2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "shadi-staging-rg",
            "virtual_machine_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Compute/virtualMachines/shadi-staging-web-vm2"
          },
          "dependencies": [
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_nic_lb_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/backendAddressPools/web-backend",
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm1/ipConfigurations/web-vm-ip-1|/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-vm-ip-1",
            "network_interface_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm1"
          },
          "dependencies": [
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/backendAddressPools/web-backend",
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm2/ipConfigurations/web-vm-ip-1|/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-vm-ip-1",
            "network_interface_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm2"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "web_nic_nat_rule_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm1/ipConfigurations/web-vm-ip-1|/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/inboundNatRules/vm1-ssh-1022-vm-22",
            "ip_configuration_name": "web-vm-ip-1",
            "nat_rule_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/inboundNatRules/vm1-ssh-1022-vm-22",
            "network_interface_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "azurerm_lb.web_lb",
            "azurerm_lb_nat_rule.web_lb_inbound_nat_rule_22",
            "azurerm_linux_virtual_machine.web_linuxvm",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm2/ipConfigurations/web-vm-ip-1|/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/inboundNatRules/vm2-ssh-2022-vm-22",
            "ip_configuration_name": "web-vm-ip-1",
            "nat_rule_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/loadBalancers/shadi-staging-web-lb/inboundNatRules/vm2-ssh-2022-vm-22",
            "network_interface_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkInterfaces/shadi-staging-web-vm2"
          },
          "dependencies": [
            "azurerm_linux_virtual_machine.web_linuxvm",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "azurerm_lb.web_lb",
            "azurerm_lb_nat_rule.web_lb_inbound_nat_rule_22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkSecurityGroups/shadi-staging-vnet-dbsubnet-nsg",
            "location": "westeurope",
            "name": "shadi-staging-vnet-dbsubnet-nsg",
            "resource_group_name": "shadi-staging-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 3010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-5432",
                "priority": 3000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkSecurityGroups/shadi-staging-vnet-websubnet-nsg",
            "location": "westeurope",
            "name": "shadi-staging-vnet-websubnet-nsg",
            "resource_group_name": "shadi-staging-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 3010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-8080",
                "priority": 3000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "3000",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "5432",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkSecurityGroups/shadi-staging-vnet-dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "shadi-staging-vnet-dbsubnet-nsg",
            "priority": 3000,
            "protocol": "Tcp",
            "resource_group_name": "shadi-staging-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "3010",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkSecurityGroups/shadi-staging-vnet-dbsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "shadi-staging-vnet-dbsubnet-nsg",
            "priority": 3010,
            "protocol": "Tcp",
            "resource_group_name": "shadi-staging-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "3000",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkSecurityGroups/shadi-staging-vnet-websubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "shadi-staging-vnet-websubnet-nsg",
            "priority": 3000,
            "protocol": "Tcp",
            "resource_group_name": "shadi-staging-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "3010",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkSecurityGroups/shadi-staging-vnet-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "shadi-staging-vnet-websubnet-nsg",
            "priority": 3010,
            "protocol": "Tcp",
            "resource_group_name": "shadi-staging-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_lbpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/publicIPAddresses/shadi-staging-lbpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.45.68.195",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "shadi-staging-lbpublicip",
            "resource_group_name": "shadi-staging-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "staging",
              "owners": "shadi"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.21.0/24",
            "address_prefixes": [
              "10.0.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-dbsubnet",
            "name": "shadi-staging-vnet-dbsubnet",
            "resource_group_name": "shadi-staging-rg",
            "virtual_network_name": "shadi-staging-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-websubnet",
            "name": "shadi-staging-vnet-websubnet",
            "resource_group_name": "shadi-staging-rg",
            "virtual_network_name": "shadi-staging-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkSecurityGroups/shadi-staging-vnet-dbsubnet-nsg",
            "subnet_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-websubnet",
            "network_security_group_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkSecurityGroups/shadi-staging-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-websubnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "646a9d53-e4e1-42b6-8816-86eeb386c689",
            "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet",
            "location": "westeurope",
            "name": "shadi-staging-vnet",
            "resource_group_name": "shadi-staging-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-websubnet",
                "name": "shadi-staging-vnet-websubnet",
                "security_group": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkSecurityGroups/shadi-staging-vnet-websubnet-nsg"
              },
              {
                "address_prefix": "10.0.21.0/24",
                "id": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/virtualNetworks/shadi-staging-vnet/subnets/shadi-staging-vnet-dbsubnet",
                "name": "shadi-staging-vnet-dbsubnet",
                "security_group": "/subscriptions/ea0fbf04-03f3-4226-bea1-c489b2320627/resourceGroups/shadi-staging-rg/providers/Microsoft.Network/networkSecurityGroups/shadi-staging-vnet-dbsubnet-nsg"
              }
            ],
            "tags": {
              "environment": "staging",
              "owners": "shadi"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}